<?xml version="1.0"?>
<package>
  <name>hrvl_gbot_description</name>
  <version>0.1.0</version>
  <description>The hrvl_gbot_description package</description>

  <maintainer email="jkyoo@dju.kr">Prof. Jeong-Ki Yoo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>
